<resources>
    <string name="app_name">Begree</string>
    <string name="title_menu_home">Home</string>
    <string name="title_menu_analyze">Analyze</string>
    <string name="title_menu_map">Map</string>
    <string name="title_menu_user">User</string>

    <string name="text_view_first_time_header">Welcome to Begree</string>
    <string name="text_view_first_time_description">An app to help you start caring for the environment</string>
    <string name="text_view_analyze_one_header">Search for individual ingredient</string>
    <string name="text_view_analyze_whole_header">Analyze cosmetics composition</string>
    <string name="text_view_one_ingredient_result_not_found_message">
        Ingredient not found. Please check the spelling</string>
    <string name="text_view_whole_analysis_result_header">Analysis result</string>
    <string name="text_view_whole_analysis_result_approved_message">Composition is approved</string>
    <string name="text_view_whole_analysis_result_not_approved_message">
        Composition is not approved. There are components with rating below 3 or we could not recognize components</string>
    <string name="text_view_whole_analysis_result_not_found_message">
        Following components were not found:
    </string>
    <string name="text_view_challenge_started_message">This challenge is started</string>
    <string name="text_view_top_header_home_fragment">Eco Articles</string>
    <string name="text_view_top_header_marking_fragment">Eco Markings</string>
    <string name="text_view_top_header_challenge_fragment">Challenges</string>
    <string name="text_view_top_header_award_fragment">Awards</string>
    <string name="text_view_no_favourites_message">You do not have Favourite articles</string>
    <string name="text_view_no_started_challenges_message">
        You are not participating in any of the challenges yet.
        Select any one you like in the corresponding section and click the “Start challenge” button.
        For completing challenges you get achievements in the application.
    </string>
    <string name="text_view_completed_award">30/30</string>
    <string name="text_view_location_description_can_recycle_header">Can recycle:</string>
    <string name="text_view_location_working_hours_monday">MO</string>
    <string name="text_view_location_working_hours_tuesday">TU</string>
    <string name="text_view_location_working_hours_wednesday">WE</string>
    <string name="text_view_location_working_hours_thursday">TH</string>
    <string name="text_view_location_working_hours_friday">FR</string>
    <string name="text_view_location_working_hours_saturday">SA</string>
    <string name="text_view_location_working_hours_sunday">SU</string>
    <string name="text_view_edit_user_profile_header">Edit Profile</string>
    <string name="text_view_edit_user_profile_information_header">Account Information:</string>

    <string name="edit_text_analyze_one">Input title</string>
    <string name="edit_text_analyze_whole">Enter a comma separated list of ingredients</string>
    <string name="edit_text_user_name">Input your name</string>
    <string name="edit_text_user_information">Input short information about yourself</string>

    <string name="button_first_time_button_text">Start</string>
    <string name="button_analyze_one_button_text">Search</string>
    <string name="button_analyze_whole_button_text">Check composition</string>
    <string name="button_challenge_not_started_text">Start challenge</string>
    <string name="button_challenge_started_text">Stop challenge</string>
    <string name="button_login_google">Sign in with Google</string>
    <string name="button_skip_registration">Skip registration</string>
    <string name="button_save">Save</string>

    <string name="toast_text_add_to_favourites">Added to Favourites</string>
    <string name="toast_text_delete_from_favourites">Deleted from Favourites</string>
    <string name="toast_text_input_ingredient">Enter ingredient for searching</string>
    <string name="toast_text_input_composition">Enter composition for analysing</string>
    <string name="toast_text_save_user_profile">New profile information is saved</string>
    <string name="toast_text_image_upload_success">Image is uploaded</string>
    <string name="toast_text_image_upload_failure">Image is not uploaded</string>

    <string name="dialog_start_challenge_header">Start challenge</string>
    <string name="dialog_start_challenge_message">
        Start this challenge. Note your progress every day to get an achievement in profile</string>
    <string name="dialog_end_challenge_header">Stop challenge</string>
    <string name="dialog_end_challenge_message">
        Press OK to stop challenge. Completing this challenge, you will not get the achievement in your profile
    </string>
    <string name="dialog_get_award_message">
        Congratulate on finishing this challenge. You can see your award in your profile
    </string>
    <string name="dialog_not_get_award_message">
        Congratulate on finishing this challenge.
        Due to not marking all days in tracker you will not get an award.
        Try this challenge again and succeed next time!
    </string>

    <string name="notification_channel_name">Challenge notification name</string>
    <string name="notification_channel_description">Challenge notification description</string>
    <string name="notification_challenge_title">Challenge Tracking</string>
    <string name="notification_challenge_description">You are participating in challenge. Do not forget to mark your progress</string>
</resources>
