<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.ecoappproject.ui.container.ContainerFragment"
        android:label="@string/title_menu_home"
        tools:layout="@layout/fragment_container" />

    <fragment
        android:id="@+id/navigation_analyze"
        android:name="com.example.ecoappproject.ui.analyze.AnalyzeFragment"
        android:label="@string/title_menu_analyze"
        tools:layout="@layout/fragment_analyze" />

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.example.ecoappproject.ui.map.MapFragment"
        android:label="@string/title_menu_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/navigation_user"
        android:name="com.example.ecoappproject.ui.user.UserFragment"
        android:label="@string/title_menu_user"
        tools:layout="@layout/fragment_user"/>
</navigation>