<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraint_layout_first_time"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/first_time_background">

    <TextView
        android:id="@+id/text_view_first_time_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="51dp"
        android:layout_marginTop="105dp"
        android:layout_marginRight="51dp"
        android:gravity="center"
        android:text="@string/text_view_first_time_header"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        app:fontFamily="@font/montserrat_bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_first_time_description"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="51dp"
        android:layout_marginTop="274dp"
        android:layout_marginRight="51dp"
        android:text="@string/text_view_first_time_description"
        android:textColor="@color/colorBlack"
        android:textSize="16sp"
        app:fontFamily="@font/montserrat_regular"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_first_time"
        android:layout_width="327dp"
        android:layout_height="52dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="90dp"
        android:background="@drawable/shape_button_start"
        android:onClick="onButtonStartButtonClick"
        android:text="@string/button_first_time_button_text"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="24sp"
        app:fontFamily="@font/montserrat_regular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>