<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/image_view_login_activity_icon"
        android:layout_width="@dimen/login_activity_icon_size"
        android:layout_height="@dimen/login_activity_icon_size"
        android:layout_marginStart="130dp"
        android:layout_marginLeft="130dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="130dp"
        android:layout_marginRight="130dp"
        android:src="@drawable/ic_app"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_login_activity_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginLeft="130dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="130dp"
        android:layout_marginRight="130dp"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_size_headers"
        app:fontFamily="@font/montserrat_bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_view_login_activity_icon" />

    <Button
        android:id="@+id/button_login_activity_google"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="160dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/shape_login_button"
        android:drawableStart="@drawable/ic_google"
        android:drawableLeft="@drawable/ic_google"
        android:drawablePadding="13dp"
        android:paddingStart="42dp"
        android:paddingLeft="42dp"
        android:paddingRight="42dp"
        android:text="@string/button_login_google"
        android:textAllCaps="false"
        android:textColor="@color/colorBlack50"
        android:textSize="@dimen/text_size_main"
        app:fontFamily="@font/montserrat_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_login_activity_app_name" />

    <Button
        android:id="@+id/button_login_activity_skip"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="110dp"
        android:background="@android:color/transparent"
        android:text="@string/button_skip_registration"
        android:textAllCaps="false"
        android:textColor="@color/colorBlack50"
        android:textSize="@dimen/text_size_main"
        app:fontFamily="@font/montserrat_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>