<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_view_edit_user_profile_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="24dp"
        android:gravity="center"
        android:text="@string/text_view_edit_user_profile_header"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_size_headers"
        app:fontFamily="@font/montserrat_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view_edit_profile_background"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="90dp"
        android:background="@drawable/shape_location_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_edit_user_profile_header" />

    <ImageView
        android:id="@+id/image_view_upload_photo_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="112dp"
        android:background="@drawable/shape_oval_accent"
        android:scaleType="centerInside"
        android:src="@drawable/ic_camera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_edit_user_profile_header"
        app:layout_constraintWidth_percent="0.4" />

    <TextView
        android:id="@+id/text_view_user_name_edit_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/montserrat_bold"
        android:gravity="center"
        android:text="John Wick"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_size_headers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_view_upload_photo_button" />

    <TextView
        android:id="@+id/text_view_user_email_edit_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/montserrat_regular"
        android:gravity="center"
        android:text="johnwick@gmail.com"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/text_size_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_user_name_edit_profile" />

    <TextView
        android:id="@+id/text_view_edit_user_profile_information_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/montserrat_regular"
        android:gravity="start"
        android:text="@string/text_view_edit_user_profile_information_header"
        android:textColor="@color/colorBlack70"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_user_email_edit_profile" />

    <EditText
        android:id="@+id/edit_text_user_name"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:autofillHints="username"
        android:background="@drawable/shape_input_field_with_border"
        android:ems="10"
        android:fontFamily="@font/montserrat_light"
        android:gravity="start"
        android:hint="@string/edit_text_user_name"
        android:inputType="textPersonName"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/colorBlack30"
        android:textSize="@dimen/text_size_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_edit_user_profile_information_header" />

    <EditText
        android:id="@+id/edit_text_user_information"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="20dp"
        android:autofillHints="username"
        android:background="@drawable/shape_input_field_with_border"
        android:ems="10"
        android:gravity="start"
        android:hint="@string/edit_text_user_information"
        android:inputType="textMultiLine"
        android:maxLength="40"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/colorBlack30"
        android:textSize="@dimen/text_size_main"
        app:fontFamily="@font/montserrat_light"
        app:layout_constraintBottom_toTopOf="@id/button_save_user_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text_user_name" />

    <Button
        android:id="@+id/button_save_user_profile"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/shape_button_usual"
        android:text="@string/button_save"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="24sp"
        app:fontFamily="@font/montserrat_regular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>