<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_view_whole_analysis_result_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="24dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="56dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="24dp"
        android:textSize="24sp"
        android:textColor="@color/colorPrimary"
        android:text="@string/text_view_whole_analysis_result_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:fontFamily="@font/montserrat_regular"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_analyze_whole"
        android:layout_width="match_parent"
        android:layout_height="335dp"
        android:scrollbars="vertical"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="24dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="120dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/text_view_whole_analysis_result_approval_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="24dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="24dp"
        android:textSize="16sp"
        android:textColor="@color/colorBlack"
        android:text="@string/text_view_whole_analysis_result_approved_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recycler_view_analyze_whole"
        app:fontFamily="@font/montserrat_light"/>

    <TextView
        android:id="@+id/text_view_whole_analysis_result_not_found_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="24dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="24dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="24dp"
        android:textSize="16sp"
        android:textColor="@color/colorBlack50"
        android:text="@string/text_view_whole_analysis_result_not_found_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_whole_analysis_result_approval_message"
        app:fontFamily="@font/montserrat_light" />

    <TextView
        android:id="@+id/text_view_whole_analysis_result_not_found_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="24dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="24dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="24dp"
        android:textSize="16sp"
        android:textColor="@color/colorBlack50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_whole_analysis_result_not_found_message"
        app:fontFamily="@font/montserrat_light"/>


</androidx.constraintlayout.widget.ConstraintLayout>